[package]
name = "race-n-chase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxt2txt = { path = "../fxt2txt" }
g24parser = { path = "../g24parser" }
clap = "4.4.6"
env_logger = "0.10.0"
log = "0.4.20"
main_error = "0.1.2"
thiserror = "1.0.48"
